--- a/css/globals.css
+++ b/css/globals.css
@@ -1,110 +1,110 @@
-@import 'variables.css';
+@import "variables.css";
 
 * {
-	margin: 0;
-	padding: 0;
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
-	font-family: inherit;
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  font-family: inherit;
 }
 
 body {
-	min-height: 100vh;
-	width: 100%;
-	display: flex;
-	flex-flow: column nowrap;
-	color: #222;
-	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-		Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  min-height: 100vh;
+  width: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+  color: #222;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 a {
-	color: var(--color-grey02);
-	font-size: var(--fontSize-small);
-	text-decoration: none;
-	transition: all 150ms;
+  color: var(--color-grey02);
+  font-size: var(--fontSize-small);
+  text-decoration: none;
+  transition: all 150ms;
 }
 
 a:hover {
-	color: var(--color-black);
+  color: var(--color-black);
 }
 
 ul {
-	list-style: none;
+  list-style: none;
 }
 
 header,
 footer {
-	padding: 2rem;
+  padding: 2rem;
 }
 
 /* Header */
 
 header {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .brand-link {
-	display: block;
-	position: relative;
-	color: inherit;
-	margin: 0;
+  display: block;
+  position: relative;
+  color: inherit;
+  margin: 0;
 }
 
 .brand {
-	display: block;
-	position: relative;
-	font-size: 1.5rem;
-	letter-spacing: 1px;
-	font-weight: 400;
-	user-select: none;
-	margin-bottom: 0.3rem;
+  display: block;
+  position: relative;
+  font-size: 1.5rem;
+  letter-spacing: 1px;
+  font-weight: 400;
+  user-select: none;
+  margin-bottom: 0.3rem;
 }
 
 .nav-list {
-	display: flex;
-	gap: var(--spacing-normal);
+  display: flex;
+  gap: var(--spacing-normal);
 }
 
 footer {
-	display: flex;
-	flex-wrap: wrap-reverse;
-	justify-content: space-between;
-	align-items: center;
+  display: flex;
+  flex-wrap: wrap-reverse;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .author {
-	color: grey;
-	font-size: 0.85rem;
+  color: grey;
+  font-size: 0.85rem;
 }
 
 main {
-	display: flex;
-	flex-wrap: wrap;
-	flex-grow: 1;
+  display: flex;
+  flex-wrap: wrap;
+  flex-grow: 1;
 }
 
 button,
 select {
-	background: none;
-	outline: none;
-	border: none;
-	cursor: pointer;
+  background: none;
+  outline: none;
+  border: none;
+  cursor: pointer;
 }
 
 @media only screen and (max-width: 480px) {
-	header {
-		text-align: center;
-	}
+  header {
+    text-align: center;
+  }
 
-	footer {
-		flex-flow: column-reverse nowrap;
-	}
+  footer {
+    flex-flow: column-reverse nowrap;
+  }
 
-	footer ul {
-		margin-bottom: 1rem;
-	}
+  footer ul {
+    margin-bottom: 1rem;
+  }
 }
